--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "wdio": "wdio run ./wdio.conf.ts"
   },
   "keywords": [],
@@ -16,7 +15,7 @@
     "@wdio/cucumber-framework": "^9.19.2",
     "@wdio/local-runner": "^9.19.2",
     "@wdio/spec-reporter": "^9.19.2",
-    "typescript": "^5.9.2",
-    "wdio-cucumberjs-json-reporter": "^6.0.1"
+    "dotenv": "^17.2.3",
+    "typescript": "^5.9.2"
   }
 }
