--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "wdio": "wdio run ./wdio.conf.ts"
+    "wdio": "wdio run ./wdio.conf.ts",
+    "allure:generate": "allure generate allure-results --clean -o allure-report && allure open allure-report"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@wdio/allure-reporter": "^9.20.0",
     "@wdio/cli": "^9.19.2",
     "@wdio/cucumber-framework": "^9.19.2",
     "@wdio/local-runner": "^9.19.2",
     "@wdio/spec-reporter": "^9.19.2",
+    "allure-commandline": "^2.34.1",
     "dotenv": "^17.2.3",
     "typescript": "^5.9.2"
   }
