--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,13 @@
     "noEmit": true,
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
-    "types": ["node", "@wdio/globals/types", "expect-webdriverio", "@wdio/cucumber-framework"],
+    "types": [
+      "node", 
+      "@wdio/globals/types", 
+      "expect-webdriverio", 
+      "@wdio/cucumber-framework", 
+      "@wdio/allure-reporter"
+    ],
     "target": "es2022"
   }
 }
